--- a/log.html
+++ b/log.html
@@ -1803,25 +1803,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,10923],[],[[4,0,0,[],[0,144,10777,5],[[0,6,7,0,0,8,9,0,[1,145,5298],[[0,10,11,0,12,13,0,0,[1,145,5164],[[146,2,14]]],[0,15,11,0,16,0,0,0,[1,5309,120],[]],[0,17,11,0,18,19,0,0,[1,5429,2],[]],[0,20,11,0,21,0,22,0,[1,5431,12],[[5443,2,23]]],[5443,2,24]]],[0,25,26,0,27,9,0,0,[1,5444,1],[[5444,2,28]]],[0,29,26,0,30,9,0,0,[1,5446,1],[]],[0,31,11,0,32,33,34,0,[1,5448,52],[[5500,2,35]]],[0,29,26,0,30,36,0,0,[1,5500,1],[]],[3,37,0,0,0,0,0,0,[0,5503,5417],[[4,38,0,0,0,0,0,0,[1,5503,62],[[0,39,11,0,40,41,42,0,[1,5503,61],[[5564,2,43]]],[0,29,26,0,30,42,0,0,[1,5564,1],[]]]],[4,44,0,0,0,0,0,0,[1,5565,33],[[0,39,11,0,40,41,42,0,[1,5565,31],[[5596,2,45]]],[0,29,26,0,30,42,0,0,[1,5597,1],[]]]],[4,46,0,0,0,0,0,0,[1,5598,30],[[0,39,11,0,40,41,42,0,[1,5598,29],[[5627,2,47]]],[0,29,26,0,30,42,0,0,[1,5627,1],[]]]],[4,48,0,0,0,0,0,0,[1,5628,30],[[0,39,11,0,40,41,42,0,[1,5629,28],[[5657,2,49]]],[0,29,26,0,30,42,0,0,[1,5658,0],[]]]],[4,50,0,0,0,0,0,0,[0,5659,5261],[[0,39,11,0,40,41,42,0,[0,5659,5260],[[10909,2,51],[10909,5,5]]],[0,29,26,0,30,42,0,0,[3,10920,0],[]]]]]]]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,143],[],[[4,0,0,[],[1,135,7],[[0,5,6,0,7,8,9,0,[1,135,0],[[135,2,10]]],[3,11,0,0,0,0,0,0,[1,137,4],[[4,12,0,0,0,0,0,0,[1,137,2],[[0,13,6,0,14,15,0,0,[1,137,1],[]],[0,16,6,0,17,15,0,0,[1,138,0],[[138,2,18]]],[0,19,6,0,20,21,0,0,[1,138,1],[]]]],[4,22,0,0,0,0,0,0,[1,139,1],[[0,13,6,0,14,15,0,0,[1,139,0],[]],[0,16,6,0,17,15,0,0,[1,139,1],[[140,2,23]]],[0,19,6,0,20,21,0,0,[1,140,0],[]]]],[4,24,0,0,0,0,0,0,[1,140,1],[[0,13,6,0,14,15,0,0,[1,140,0],[]],[0,16,6,0,17,15,0,0,[1,140,1],[[141,2,25]]],[0,19,6,0,20,21,0,0,[1,141,0],[[141,2,26]]]]]]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*LinksCount","*C:\\Users\\Kamaljit_Singh\\Python_Projects\\RobotFramework\\TestCases\\LinksCount.robot","*TestCases/LinksCount.robot","*Count the links on page","*Element with locator '<a href=\"xpath://a[5\">xpath://a[5\x3c/a>]' not found.","*LaunchBrowser","*Keywords","*${URL}, ${browser}","*${title}","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${appurl}, ${brwosername}","eNqtzMENwyAMAMBVrHx4Af8qzQqdwVAHkChGtiPU7dMh+j/da9Joo0ASXkoCLlfhDzkwhoRKcEkHtyNUofO5VbOpjxjXWmGx9PfPGomGNk6OhbgIzvqN2GfFRNYydt+bmufTZ76GSSON2/GnaI94uHADDOtI2Q==","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Set Selenium Implicit Wait","*<p>Sets the implicit wait value used by Selenium.\x3c/p>","*5 seconds","*Get Title","*<p>Returns the title of the current page.\x3c/p>","*${titleOfThePage}","*${titleOfThePage} = List of Countries of the world in alphabetical order (A to Z) - Worldometer","*${title} = List of Countries of the world in alphabetical order (A to Z) - Worldometer","*Log","*BuiltIn","*<p>Logs the given message with the given level.\x3c/p>","*List of Countries of the world in alphabetical order (A to Z) - Worldometer","*Log To Console","*<p>Logs the given message to the console.\x3c/p>","*Get Element Count","*<p>Returns the number of elements matching <code>locator\x3c/code>.\x3c/p>","*<a href=\"xpath://a\">xpath://a\x3c/a>","*${size}","*${size} = 236","*\"this is the count === ${size}\"","*${i} IN RANGE [ 1 | ${size} ]","*${i} = 1","*Get Text","*<p>Returns the text value of the element identified by <code>locator\x3c/code>.\x3c/p>","*<a href=\"xpath://a[${i\">xpath://a[${i\x3c/a>}]","*${linkTest}","*${linkTest} = Learn more","*${i} = 2","*${linkTest} = faq","*${i} = 3","*${linkTest} = languages","*${i} = 4","*${linkTest} = contact","*${i} = 5","*\x3c/td>\x3c/tr><tr><td colspan=\"3\"><a href=\"selenium-screenshot-1.png\"><img src=\"selenium-screenshot-1.png\" width=\"800px\">\x3c/a>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*ForLoop","*C:\\Automation\\git_repo_projects\\Robotframework\\TestCases\\ForLoop.robot","*TestCases/ForLoop.robot","*THREE","*Create List","*BuiltIn","*<p>Returns a list containing given items.\x3c/p>","*111, 'Hello How are you', 4.55, 56, \"HELLO\"","*@{listname}","*@{listname} = [ 111 | 'Hello How are you' | 4.55 | 56 | \"HELLO\" ]","*${i} IN [ @{listname} ]","*${i} = 111","*Log To Console","*<p>Logs the given message to the console.\x3c/p>","*${i}","*Log","*<p>Logs the given message with the given level.\x3c/p>","*111","*Exit For Loop If","*<p>Stops executing the enclosing FOR loop if the <code>condition\x3c/code> is true.\x3c/p>","*${i}==4.55","*${i} = 'Hello How are you'","*'Hello How are you'","*${i} = 4.55","*4.55","*Exiting for loop altogether."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:11","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:11","fail":1,"id":"s1","label":"LinksCount","name":"LinksCount","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"ForLoop","name":"ForLoop","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1690531282966;
+window.output["baseMillis"] = 1690547016243;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 10934;
+window.output["generated"] = 148;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
